# Baremetal-RNLA

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Q_matrix.txt  README.md  R_matrix.txt  a.out  rnla.cmake  v.txt  v_intuitive.txt
dataset/: genSuitsparse.py  gen_sketch_sparse.py  gen_suitsparse.py  gendata.py  gensketch.py  gentests.py  util.py
dataset/gemm/: small_csc.h  small_gemm.h  small_sdcsc.h
dataset/ls/: small_ls copy.h  small_ls.h  tiny_ls.h
dataset/rect/: large_rectL.h  med_rectL.h  small_rectL.h  tiny_rectL.h
dataset/sketching_matrix/: sk.h
dataset/sns/: sk_1024_fixed.h  sk_1024_interval.h  sk_256_fixed.h  sk_256_interval.h  sk_32_fixed.h  sk_32_interval.h  sk_4096_fixed.h  sk_4096_interval.h  sk_512_fixed.h  sk_512_interval.h  sk_8192_fixed.h
dataset/square/: med_sqL.h  small_sqL.h  tiny_sqL.h
dataset/suitsparse/: ch7-9-b3.mat  cis-n4c6-b4.mat  mk12-b2.mat
python_tests/: Q_matrix.txt  R_matrix.txt  test_qrls.ipynb
src/cpu/: cholesky_lapack.c  dsgemm.c  dsgemm.h  gemm.c  gemm.h  ls_qr_householder.c  pregen_sketch_solve.c  randgen.c  scalar_access.c  sketch_n_solve.c  sketch_n_solve_custom.c  sketch_n_solve_defined.c  solver.c  time_rand.c
src/cpu/rand/: rand.c  splitmix64.py  xoroshiro.c  xoroshiro128p_64.c  xoroshrio.c  xorshift.c
src/eigen/: hh_example  hh_example.cpp  scratch  scratch.cpp  sketch_hh.cpp
src/rvv/: dsgemm.c  gemm.c  htif.ld  ls_qr_householder.c  matmul.c  predefined_sns_rvv.c  rand_dsgemm.c  riscv_vector.h  sns_rvv.c  xorshift_m8.c
src/rvv/c/: cholesky.c  cpu_ls_qr_householder.c  dsgemm.c  gemm.c  gemm_ka.c  ls_qr_householder.c  predefined_sns_rvv.c  sns_rvv.c  test_cholesky.c  utils.c
src/rvv/c/rand/: xoroshiro128p.c  xorshift_m8.c
src/rvv/headers/: cholesky.h  gemm_rvv.h  householder.h  ls_qr_householder_test.h  rand.h  utils.h
src/rvv/rand/: rand.h  xoroshiro128p.c  xorshift.c  xorshift_m8.c
test/: lib.h  test_cpu.c  test_rvv.c
test/cpu/: test_cpu.c  test_solver.c
test/rvv/: ls_qr_householder_test.c  test_rvv.c
